@@ -34,7 +34,6 @@
 import struct
 from hashlib import md5
 
-from PyPDF2 import utils
 from PyPDF2.utils import b_, ord_, str_
 
 # ref: pdf1.8 spec section 3.5.2 algorithm 3.2
@@ -100,7 +99,7 @@ def _alg33(owner_pwd, user_pwd, rev, keylen):
     user_pwd = b_((user_pwd + str_(_encryption_padding))[:32])
     # 6. Encrypt the result of step 5, using an RC4 encryption function with
     # the encryption key obtained in step 4.
-    val = utils.RC4_encrypt(key, user_pwd)
+    val = RC4_encrypt(key, user_pwd)
     # 7. (Revision 3 or greater) Do the following 19 times: Take the output
     # from the previous invocation of the RC4 function and pass it as input to
     # a new invocation of the function; use an encryption key generated by
@@ -112,7 +111,7 @@ def _alg33(owner_pwd, user_pwd, rev, keylen):
             new_key = ""
             for l in range(len(key)):
                 new_key += chr(ord_(key[l]) ^ i)
-            val = utils.RC4_encrypt(new_key, val)
+            val = RC4_encrypt(new_key, val)
     # 8. Store the output from the final invocation of the RC4 as the value of
     # the /O entry in the encryption dictionary.
     return val
@@ -150,7 +149,7 @@ def _alg34(password, owner_entry, p_entry, id1_entry):
     # 2. Encrypt the 32-byte padding string shown in step 1 of algorithm 3.2,
     # using an RC4 encryption function with the encryption key from the
     # preceding step.
-    U = utils.RC4_encrypt(key, _encryption_padding)
+    U = RC4_encrypt(key, _encryption_padding)
     # 3. Store the result of step 2 as the value of the /U entry in the
     # encryption dictionary.
     return U, key
@@ -174,7 +173,7 @@ def _alg35(password, rev, keylen, owner_entry, p_entry, id1_entry, metadata_encr
     md5_hash = m.digest()
     # 4. Encrypt the 16-byte result of the hash, using an RC4 encryption
     # function with the encryption key from step 1.
-    val = utils.RC4_encrypt(key, md5_hash)
+    val = RC4_encrypt(key, md5_hash)
     # 5. Do the following 19 times: Take the output from the previous
     # invocation of the RC4 function and pass it as input to a new invocation
     # of the function; use an encryption key generated by taking each byte of
@@ -185,7 +184,7 @@ def _alg35(password, rev, keylen, owner_entry, p_entry, id1_entry, metadata_encr
         new_key = b_("")
         for k in key:
             new_key += b_(chr(ord_(k) ^ i))
-        val = utils.RC4_encrypt(new_key, val)
+        val = RC4_encrypt(new_key, val)
     # 6. Append 16 bytes of arbitrary padding to the output from the final
     # invocation of the RC4 function and store the 32-byte result as the value
     # of the U entry in the encryption dictionary.
@@ -193,3 +192,20 @@ def _alg35(password, rev, keylen, owner_entry, p_entry, id1_entry, metadata_encr
     # mean, so I have used null bytes.  This seems to match a few other
     # people's implementations)
     return val + (b_("\x00") * 16), key
+
+
+def RC4_encrypt(key, plaintext):
+    S = list(range(256))
+    j = 0
+    for i in range(256):
+        j = (j + S[i] + ord_(key[i % len(key)])) % 256
+        S[i], S[j] = S[j], S[i]
+    i, j = 0, 0
+    retval = []
+    for x in range(len(plaintext)):
+        i = (i + 1) % 256
+        j = (j + S[i]) % 256
+        S[i], S[j] = S[j], S[i]
+        t = S[(S[i] + S[j]) % 256]
+        retval.append(b_(chr(ord_(plaintext[x]) ^ t)))
+    return b_("").join(retval)
